--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "label-approvals",
   "version": "1.0.0",
   "description": "Require certain team-members approvals based on labels",
-  "main": "index.js",
+  "main": "dist/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
