--- a/.github/workflows/label-approvals.yml
+++ b/.github/workflows/label-approvals.yml
@@ -12,4 +12,4 @@ jobs:
       - name: Check Labels
         uses: lvegerano/label-approvals@main
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ secrets.LAV_PAT }}
